--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml+png" href="/favicon_S3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FashionHub</title>
+    <title>FashionHub - kjsportfolio.se</title>
   </head>
   <body>
     <div id="root"></div>
